ifds/src/tests/solver/snapshots/ifds__tests__solver__test_gcd.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%11",
        function: "0",
        pc: 17,
    },
    Taint {
        variable: "%12",
        function: "0",
        pc: 18,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 18,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 19,
    },
    Taint {
        variable: "%12",
        function: "0",
        pc: 19,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 19,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 20,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 20,
    },
    Taint {
        variable: "%12",
        function: "0",
        pc: 20,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 20,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 21,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 21,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 21,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 21,
    },
    Taint {
        variable: "%3",
        function: "0",
        pc: 22,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 22,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 22,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 22,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 22,
    },
    Taint {
        variable: "%3",
        function: "0",
        pc: 23,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 23,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 23,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 23,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 23,
    },
    Taint {
        variable: "%3",
        function: "0",
        pc: 24,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 24,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 24,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 24,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 24,
    },
    Taint {
        variable: "%3",
        function: "0",
        pc: 25,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 25,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 25,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 25,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 25,
    },
    Taint {
        variable: "%3",
        function: "0",
        pc: 26,
    },
    Taint {
        variable: "%14",
        function: "0",
        pc: 26,
    },
    Taint {
        variable: "%13",
        function: "0",
        pc: 26,
    },
    Taint {
        variable: "%2",
        function: "0",
        pc: 26,
    },
    Taint {
        variable: "%11",
        function: "0",
        pc: 26,
    },
]
