ifds/src/tests/solver/snapshots/ifds__tests__solver__test_gcd_vars.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", vars)"

---
[
    "%11",
    "%12",
    "%13",
    "%14",
    "%2",
    "%3",
]
