ifds/src/tests/solver/snapshots/ifds__tests__solver__test_globals.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%0",
        function: "test",
        pc: 0,
    },
    Taint {
        variable: "%-1",
        function: "test",
        pc: 1,
    },
    Taint {
        variable: "%0",
        function: "test",
        pc: 1,
    },
    Taint {
        variable: "%0",
        function: "test",
        pc: 2,
    },
    Taint {
        variable: "%2",
        function: "test",
        pc: 2,
    },
    Taint {
        variable: "%-1",
        function: "test",
        pc: 2,
    },
]
