ifds/src/tests/solver/snapshots/ifds__tests__solver__test_globals_dot.snap
---
source: src/tests/solver/mod.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (1) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (14) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (20) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (21) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (24) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%-1$] (29) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (31) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (33) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (35) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (36) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (37) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (38) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (39) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%-1$] (44) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (45) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (53) at (1, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [], [2])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (2) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (3) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%-1$] (5) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (18) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (26) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (30) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%-1$] (32) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (40) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (41) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (42) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (43) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (46) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (47) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (48) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (49) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (50) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (51) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (52) at (5, 3) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (3.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_5) at (3.5, 2.5) {Return([-1])};
\node[font=\tiny] (note_6) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_7) at (3.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (3.5, 2.5) {Return([-1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (23);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (2) [bend right] edge  node { } (12);
		\path[->, blue] (2) [bend right] edge  node { } (13);
		\path[->, blue] (2) [bend right] edge  node { } (28);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (29);
		\path[->, blue] (0) [bend right] edge  node { } (31);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->] (0) edge (0);
		\path[->] (0) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (23);
		\path[->] (0) edge (14);
		\path[->] (0) edge (7);
		\path[->] (0) edge (7);
		\path[->] (7) edge (8);
		\path[->] (7) edge (8);
		\path[->] (2) edge (2);
		\path[->] (2) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (28);
		\path[->] (14) edge (29);
		\path[->] (14) edge (31);
		\path[->] (2) edge (12);
		\path[->] (12) edge (13);
		\path[->] (12) edge (13);
		\path[->] (13) edge (28);
		\path[->] (13) edge (28);
		\path[->] (2) edge (2);
		\path[->] (2) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (28);
		\path[->] (1) edge node { } (1);


                \end{tikzpicture}
            \end{document}
