ifds/src/tests/solver/snapshots/ifds__tests__solver__test_globals_vars.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", vars)"

---
[
    "%-1",
    "%0",
    "%2",
]
