ifds/src/tests/solver/snapshots/ifds__tests__solver__test_kill.snap
---
source: src/tests/solver/mod.rs
expression: "format!(\"{:#?}\", sinks)"

---
[
    Taint {
        variable: "%0",
        function: "test",
        pc: 0,
    },
]
